[package]
name = "database-enforcer"
author = "Eva Harris <mail@gastrodon.io>"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "~0.3"

[dependencies.tokio]
versoin = "~1.9"
features = ["full"]

[dependencies.walkdir]
version = "~2.3"
